编辑了部分配置文件信息

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -15,5 +15,5 @@ pidfile=/root/logs/order.pid
 chmod-socket=777
 logfile-chmod=644
 daemonize=/root/logs/order.log
-# 映射static文件位置
+# 静态文件映射static文件位置
 static-map = /static=/mnt/hgfs/CentOS7-Share/order/web/static
