修复bug 完善分享功能

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,19 +1,19 @@
 [uwsgi]
 #源码目录
-chdir=/mnt/hgfs/CentOS7-Share/order
+chdir=/developer/git-repository/Reservation_System
 #python 虚拟环境
-home=/root/harry
+home=/developer/python3_env
 module=manager
 callable=app
 master=true
 processes=4
 http=0.0.0.0:8889
 # 新建一个sock文件来存放
-socket=/root/logs/order.sock
+socket=/developer/git-repository/Reservation_System/data/www/logs/order.sock
 buffer-size=65535
-pidfile=/root/logs/order.pid
+pidfile=/developer/git-repository/Reservation_System/data/www/logs/order.pid
 chmod-socket=777
 logfile-chmod=644
-daemonize=/root/logs/order.log
-# 静态文件映射static文件位置
-static-map = /static=/mnt/hgfs/CentOS7-Share/order/web/static
+daemonize=/developer/git-repository/Reservation_System/data/www/logs/order.log
+# 映射static文件位置
+static-map = /static=/developer/git-repository/Reservation_System/web/static
